// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnhancedReferralTab renders correctly 1`] = `
.c0 {
  margin: 0.75rem 2rem 0.75rem 2rem;
}

<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="AgencyResponseForm container-fluid"
  >
    <div
      className="form-row"
    >
      <div
        className="col"
      >
        <div
          className="form-row"
        >
          <label
            className="form-label col-form-label col-md-8"
          >
            Date of Initial Enhanced Referral Notification Sent
          </label>
          <div
            className="col-md-4 form-group"
          >
            <div
              className="react-datepicker-wrapper"
            >
              <div
                className="react-datepicker__input-container"
              >
                <input
                  autoComplete="off"
                  className="form-control date-picker"
                  disabled={false}
                  id="datepicker-initialNotificationSentOn"
                  name="initialNotificationSentOn"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="--/--/----"
                  readOnly={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-row"
        >
          <label
            className="form-label col-form-label col-md-8"
          >
            Date of 30 Day Enhanced Referral Notification Sent
          </label>
          <div
            className="col-md-4 form-group"
          >
            <div
              className="react-datepicker-wrapper"
            >
              <div
                className="react-datepicker__input-container"
              >
                <input
                  autoComplete="off"
                  className="form-control date-picker"
                  disabled={false}
                  id="datepicker-thirtyDayNotificationSentOn"
                  name="thirtyDayNotificationSentOn"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="--/--/----"
                  readOnly={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-row"
        >
          <label
            className="form-label col-form-label col-md-8"
          >
            Date of 60 Day Enhanced Referral Notification Sent
          </label>
          <div
            className="col-md-4 form-group"
          >
            <div
              className="react-datepicker-wrapper"
            >
              <div
                className="react-datepicker__input-container"
              >
                <input
                  autoComplete="off"
                  className="form-control date-picker"
                  disabled={false}
                  id="datepicker-sixtyDayNotificationSentOn"
                  name="sixtyDayNotificationSentOn"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="--/--/----"
                  readOnly={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-row"
        >
          <label
            className="form-label col-form-label col-md-8"
          >
            Date of 90 Day Enhanced Referral Notification Sent
          </label>
          <div
            className="col-md-4 form-group"
          >
            <div
              className="react-datepicker-wrapper"
            >
              <div
                className="react-datepicker__input-container"
              >
                <input
                  autoComplete="off"
                  className="form-control date-picker"
                  disabled={false}
                  id="datepicker-ninetyDayNotificationSentOn"
                  name="ninetyDayNotificationSentOn"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="--/--/----"
                  readOnly={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="col"
        style={
          Object {
            "padding": "0 0 0 10px",
          }
        }
      >
        <label
          className="form-label"
        >
          <strong>
            Note: 
          </strong>
          Changing the dates on these fields does not change the date the notifications are sent from the Common Hosted Email Service (CHES), which is managed by the Exchange Lab.
        </label>
        <label
          className="form-label"
        >
          The only way to stop future unsent notifications is to cancel the entire project.
        </label>
      </div>
    </div>
    <h3>
      Agency Interest
    </h3>
    <div
      className="row"
    >
      <div
        className="col-md-5"
      >
        <div
          className="form-group"
        >
          <div
            className="rbt"
            style={
              Object {
                "outline": "none",
                "position": "relative",
              }
            }
            tabIndex={-1}
          >
            <div
              style={
                Object {
                  "display": "flex",
                  "flex": 1,
                  "height": "100%",
                  "position": "relative",
                }
              }
            >
              <input
                aria-autocomplete="both"
                aria-expanded={false}
                aria-haspopup="listbox"
                autoComplete="off"
                className="rbt-input-main form-control rbt-input"
                id="addAgencyResponse-field"
                name="addAgencyResponse"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                placeholder="Enter an Agency"
                role="combobox"
                type="text"
                value=""
              />
              <input
                aria-hidden={true}
                className="rbt-input-hint"
                readOnly={true}
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "borderColor": "transparent",
                    "boxShadow": "none",
                    "color": "rgba(0, 0, 0, 0.35)",
                    "left": 0,
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
                tabIndex={-1}
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="col"
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Add
        </button>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="PropertyListView container-fluid"
        >
          <div
            className="ScrollContainer"
          >
            <div
              className="table"
              role="table"
              style={
                Object {
                  "minWidth": undefined,
                }
              }
            >
              <div
                className="thead thead-light"
              >
                <div
                  className="tr"
                  role="row"
                  style={
                    Object {
                      "display": "flex",
                      "flex": "1 0 auto",
                      "minWidth": "120px",
                    }
                  }
                >
                  <div
                    className="th reset-filter svg-btn"
                  />
                  <div
                    className="th"
                    colSpan={1}
                    role="columnheader"
                    style={
                      Object {
                        "alignItems": "center",
                        "boxSizing": "border-box",
                        "display": "flex",
                        "flex": "100 0 auto",
                        "justifyContent": "flex-start",
                        "minWidth": "30px",
                        "textAlign": "left",
                        "width": "100px",
                      }
                    }
                  >
                    <div
                      className="sortable-column"
                    >
                      Agency
                      <span
                        style={
                          Object {
                            "flex": "1 1 auto",
                          }
                        }
                      />
                    </div>
                  </div>
                  <div
                    className="th"
                    colSpan={1}
                    role="columnheader"
                    style={
                      Object {
                        "alignItems": "center",
                        "boxSizing": "border-box",
                        "display": "flex",
                        "flex": "60 0 auto",
                        "justifyContent": "flex-start",
                        "minWidth": "30px",
                        "textAlign": "left",
                        "width": "60px",
                      }
                    }
                  >
                    <div
                      className="sortable-column"
                    >
                      Business Case Received Date
                      <span
                        style={
                          Object {
                            "flex": "1 1 auto",
                          }
                        }
                      />
                    </div>
                  </div>
                  <div
                    className="th"
                    colSpan={1}
                    role="columnheader"
                    style={
                      Object {
                        "alignItems": "center",
                        "boxSizing": "border-box",
                        "display": "flex",
                        "flex": "100 0 auto",
                        "justifyContent": "flex-start",
                        "minWidth": "30px",
                        "textAlign": "left",
                        "width": "100px",
                      }
                    }
                  >
                    <div
                      className="sortable-column"
                    >
                      Note
                      <span
                        style={
                          Object {
                            "flex": "1 1 auto",
                          }
                        }
                      />
                    </div>
                  </div>
                  <div
                    className="th"
                    colSpan={1}
                    role="columnheader"
                    style={
                      Object {
                        "alignItems": "center",
                        "boxSizing": "border-box",
                        "display": "flex",
                        "flex": "80 0 auto",
                        "justifyContent": "flex-start",
                        "minWidth": "30px",
                        "textAlign": "left",
                        "width": "80px",
                      }
                    }
                  >
                    <div
                      className="sortable-column"
                    >
                      Response
                      <span
                        style={
                          Object {
                            "flex": "1 1 auto",
                          }
                        }
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="no-rows-message"
              >
                No rows to display
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="EnhancedReferralCompleteForm container-fluid"
  >
    <h3>
      Enhanced Referral Process Complete
    </h3>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Interest Received On
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-interestedReceivedOn"
              name="interestedReceivedOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-row"
    >
      <div
        className="col"
      >
        <div
          className="ProjectNotes form-row"
        >
          <div
            className="col form-group col"
          >
            <label
              className="form-label"
              htmlFor="input-interestFromEnhancedReferralNote"
            >
              Interest Note
            </label>
            <textarea
              className="col-md-5 form-control"
              id="input-interestFromEnhancedReferralNote"
              name="interestFromEnhancedReferralNote"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        On Hold Notification Sent
         
        <svg
          className="tooltip-icon"
          fill="currentColor"
          height="1em"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          />
        </svg>
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-onHoldNotificationSentOn"
              name="onHoldNotificationSentOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Date Transferred within the GRE
        <svg
          className="tooltip-icon"
          fill="currentColor"
          height="1em"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          />
        </svg>
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-transferredWithinGreOn"
              name="transferredWithinGreOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c0"
    >
      OR
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Clearance Notification Sent
        <svg
          className="tooltip-icon"
          fill="currentColor"
          height="1em"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          />
        </svg>
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-clearanceNotificationSentOn"
              name="clearanceNotificationSentOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`EnhancedReferralTab renders correctly when approved for exemption 1`] = `
.c0 {
  margin: 0.75rem 2rem 0.75rem 2rem;
}

<form
  action="#"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="EnhancedReferralCompleteForm container-fluid"
  >
    <div
      className="ProjectNotes form-row"
    >
      <div
        className="col-md-12 form-group col"
      >
        <label
          className="form-label"
          htmlFor="input-exemptionRationale"
        >
          Exemption Rationale
        </label>
        <textarea
          className="col-md-auto form-control"
          disabled={true}
          id="input-exemptionRationale"
          name="exemptionRationale"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        />
      </div>
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        ADM Approved Exemption On
      </label>
      <div
        className="required col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-exemptionApprovedOn"
              name="exemptionApprovedOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              required={true}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Clearance Notification Sent
      </label>
      <div
        className="required col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={false}
              id="datepicker-clearanceNotificationSentOn"
              name="clearanceNotificationSentOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              required={true}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <h3>
      Option 1: Transfer within the GRE
    </h3>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Date Transferred within the GRE
        <svg
          className="tooltip-icon"
          fill="currentColor"
          height="1em"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
          />
        </svg>
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={true}
              id="datepicker-transferredWithinGreOn"
              name="transferredWithinGreOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="col-md-6"
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Update Property Information
        </button>
      </div>
    </div>
    <h3>
      Option 2: Proceed to Surplus Properties List
    </h3>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        Request Received On
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={true}
              id="datepicker-requestForSplReceivedOn"
              name="requestForSplReceivedOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="form-row"
    >
      <label
        className="form-label col-form-label col-md-4"
      >
        SPL Addition Approved On
      </label>
      <div
        className="col-md-2 form-group"
      >
        <div
          className="react-datepicker-wrapper"
        >
          <div
            className="react-datepicker__input-container"
          >
            <input
              autoComplete="off"
              className="form-control date-picker"
              disabled={true}
              id="datepicker-approvedForSplOn"
              name="approvedForSplOn"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              placeholder="--/--/----"
              readOnly={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="justify-content-center"
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Proceed to SPL
        </button>
        <div
          className="c0"
        >
          OR
        </div>
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Not Included in the SPL
        </button>
      </div>
    </div>
    <h3>
      Option 3: Add to Enhanced Referral Process
    </h3>
    <div
      className="form-row"
    >
      <div
        className="justify-content-center add-space-below"
      >
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Add to Enhanced Referral Process
        </button>
      </div>
    </div>
  </div>
</form>
`;
